--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^7.0.2",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
